Fixed the cutoff line

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,10 @@
   color: var(--theme-text);
 }
 
+.text-theme-text {
+  color: var(--theme-background);
+}
+
 .text-theme-secondary {
   color: var(--theme-secondary_text)
 }
